temp fix so you can actually read the dropdowns on mobile

--- a/usa_website/static/usa_website/css/bootstrap.css
+++ b/usa_website/static/usa_website/css/bootstrap.css
@@ -2977,7 +2977,7 @@ tbody.collapse.in {
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: #fff;
+  background-color: #000;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
